# BetMetric

./: AGENTS.md  GEMINI.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2d2b78433a88_initial_tables_show_tables_show_.py  4f5d2e9e3c62_add_zombie_and_transaction_fields.py  7f9c4b7c1c2a_add_bet_flagged.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: bets.py  metrics.py  transactions.py
docs/: DESIGN_SYSTEM.md  gameplan.md  journey.md  vision.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddTransactionModal.tsx  AppShell.tsx  BetDetailDrawer.tsx  BetNode.tsx  CreateRootModal.tsx  EditBetModal.tsx  EscrowChat.tsx  Modal.tsx  Sidebar.tsx  StrategyTree.tsx  TopBar.tsx  ZeroState.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Ledger.tsx  Login.tsx  Settings.tsx
frontend/src/types/: api.ts
frontend/src/utils/: api.ts  format.ts
future_directions/: roadmap_exploration.md
